# rogos

./: Cargo.toml  README.md  rustfmt.toml  taplo.toml
rogos/: Cargo.toml
rogos-actor/: Cargo.toml
rogos-client/: Cargo.toml
rogos-dashboard/: Cargo.toml
rogos-schema/: Cargo.toml
rogos-server/: Cargo.toml
rogos-store/: Cargo.toml
rogos-testing/: Cargo.toml
rogos/rogos-macro/: Cargo.toml
rogos/src/: lib.rs
rogos/src/aggregate/: mod.rs
rogos/src/command/: mod.rs
rogos/src/message/: mod.rs
rogos/src/query/: mod.rs
rogos/src/saga/: mod.rs
